Added throughput timeline logging